<resources>
    <string name="password">Password</string>
    <string name="app_name">StyleOmega</string>
    <string name="username">Username</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up today</string>
    <string name="email">Email</string>
    <string name="name">Name</string>
    <string name="sign_up">SIGN UP</string>
    <string name="confirm_password">Confirm password</string>
    <string name="todo">TODO</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="home_screen">Home Screen</string>
    <string name="shop_men">SHOP MEN</string>
    <string name="tshirt">TShirt</string>
    <string name="add_to_cart">ADD TO CART</string>
    <string name="buy_now">BUY NOW</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="pay_now">PAY NOW</string>
    <string name="add_payment_details">Add payment details</string>
    <string name="title_activity_login">Login</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="tab_text_3">Tab 3</string>
    <string name="Open">Open</string>
    <string name="Close">Close</string>
    <string name="title_activity_homepage">Homepage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_productpage">productpage</string>
    <string name="title_activity_lsitviewact">lsitviewact</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_aaa">aaa</string>


</resources>
